<?xml version="1.0"?>
<package format="2">
  <name>excavator_bringup</name>
  <version>1.0.0</version>
  <description>
    roslaunch scripts for starting the Doosan Infracore Excavator
  </description>
  <license>BSD</license>
  <author email="cspark@clobot.co.kr">Daniel Park</author>
  <maintainer email="ijpark@clobot.co.kr">Tony Park</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>excavator_description</exec_depend>
</package>
