<?xml version="1.0"?>
<package format="2">
  <name>excavator_diagnostics</name>
  <version>1.0.0</version>
  <description>
    Diagnostic msg publishing package for Doosan Infracore Excavator
  </description>
  <license>BSD</license>
  <author email="cspark@clobot.co.kr">Daniel Park</author>
  <maintainer email="ijpark@clobot.co.kr">Tony Park</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>excavator_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
